# solaris

./: .Cargo.toml.swp  .gitignore  ;  Cargo.toml
src/: .main.rs.swp  lib.rs  main.rs
src/datarythms/: mod.rs  queue.rs  stack.rs
src/gui/: mod.rs
src/messaging/: mod.rs
src/primo/: mod.rs
