[package]
name = "solaris"
version = "0.1.0"
authors = ["Misrab <faizullah.misrab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
crossterm = "0.14"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
